tests/ui/hole_in_index_array.stderr
error[E0308]: mismatched types
 --> tests/ui/hole_in_index_array.rs:4:40
  |
4 |       let arr: IndexArray<u32, u32, 3> = index_array! {
  |  ________________________________________^
5 | |         0 => 2,
6 | |         2 => 3,
7 | |     };
  | |     ^
  | |     |
  | |_____expected an array with a size of 3, found one with a size of 2
  |       arguments to this function are incorrect
  |
note: associated function defined here
 --> src/index_array.rs
  |
  |     pub const fn new(data: [T; N]) -> Self {
  |                  ^^^
  = note: this error originates in the macro `index_array` (in Nightly builds, run with -Z macro-backtrace for more info)
